fixed image wrap issue on answer page

--- a/app/assets/stylesheets/rounds.css.scss
+++ b/app/assets/stylesheets/rounds.css.scss
@@ -38,8 +38,10 @@ h3 {
 
 .well {
   font-weight: lighter;
+  
 }
 
 .pic {
+  float:left;
   margin: 0px 10px 0px 0px;
 }
